--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -120,9 +120,11 @@ Profile:
   DeleteAddress: Delete this address
   DeletePrimaryAddressError: Cannot delete primary destination. Set another as the primary first.
   Cancel: Cancel
-  ClientEmail: Client e-mail address
-  ClientEmailError: Please enter a valid e-mail address for the client.
-  ClientInviteSent: Invitation has been emailed to the client.
+  ClientEmailHeading: Create client account
+  ClientEmailSubhead: We recommend you create an account for this client so they can sign in directly.
+  ClientEmailLabel: Client email address
+  ClientEmailError: Please enter a valid email address for the client.
+  ClientInviteSent: An invitation has been emailed to the client.
   CreateClientAccount: Create client account
   CreateClientAccountError: Failed to create client log-in account. Please try again.
   DeleteDestination: Delete this destination
