--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -132,7 +132,7 @@ Profile:
   DeleteProfile: Delete profile
   DeleteProfileError: Failed to delete profile. Please try again.
   Destinations: Where do you go most frequently (besides your home)?
-  HideNonECC: Only show Expanded Choice Communities?
+  HideNonECC: Show Expanded Choice communities only
   ImportanceAccessibility: Commute time
   ImportanceHeading: How important are these factors when choosing a home?
   ImportanceSchools: School quality
@@ -150,6 +150,7 @@ Tooltips:
   Average: about average
   BelowAverage: below average
   Education: "<p><strong>%(town)</strong> schools are <strong>%(averageRelation)</strong> for the state and rank higher than <strong>%(edPercentile)%</strong> of other school districts when considering overall school quality and performance of low-income students. (Source: <a href=\"http://profiles.doe.mass.edu/\" target=\"_blank\">MA DOE</a>)</p>"
+  ExpandedChoice: "<p>Expanded Choice communities are TK</p>"
   ViolentCrime: "<p><strong>%(town)</strong> has <strong>%(averageRelation)</strong> public safety, safer than <strong>%(crimePercentile)%</strong> of other zipcodes in the state. (Source: <a href=\"https://www.fbi.gov/services/cjis/ucr\" target=\"_blank\">FBI Uniform Crime Reporting violent crime data</a>)</p>"
   ViolentCrimeBoston: "<p><strong>%(town)</strong> has <strong>%(averageRelation)</strong> public safety, safer than <strong>%(crimePercentile)%</strong> of other zipcodes in the state. (Source: <a href=\"https://data.boston.gov/\" target=\"_blank\">Boston Police Department Incident Reports</a>)</p>"
   RentalUnits: "<p><strong>%(town)</strong> has an <strong>%(averageRelation)</strong> number of rental units for the state. From 2017-2018 there were <strong>%(totalMapc)</strong> units listed on Craigslist. (Source: <a href=\"https://www.mapc.org/\" target=\"_blank\">MAPC</a>)</p>"
