--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -128,6 +128,8 @@ Profile:
   ClientInviteSent: An invitation has been emailed to the client.
   CreateClientAccount: Create client account
   CreateClientAccountError: Failed to create client log-in account. Please try again.
+  CreateClientAccountExistsError: A client log-in account already exists for that email with voucher number %(voucher).
+  RecreateClientAccount: Resend invite to client email
   DeleteDestination: Delete this destination
   DeleteProfile: Delete profile
   DeleteProfileError: Failed to delete profile. Please try again.
