Replace ECC key/value UI with label below neighb name

--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -71,7 +71,7 @@ NeighborhoodDetails:
 NeighborhoodInfo:
   SchoolChoice: School choice options »
   EducationCategory: Schools
-  ExpandedChoice: Expanded Choice
+  ExpandedChoice: An Expanded Choice Community
   Population: Population
   RentalUnits: Rental units
   Score: Overall score
