--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -57,6 +57,7 @@ NeighborhoodDetails:
   FromOrigin: from
   GoogleSearchLink: Google
   GoogleMapsLink: Google Maps
+  HotpadsSearchLink: Hotpads
   MassHousingLink: Mass Housing
   MaxRent: Est. max rent
   ModeSummary: via
