Add BHA search tool link

--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -50,6 +50,7 @@ Dock:
 NeighborhoodDetails:
   AboutNeighborhoodLinksHeading: Learn about this neighborhood
   ApartmentsDotComLink: Apartments.com
+  BHAApartmentsLink: Boston Housing Authority
   ChildCareSearchLink: Child Care Search
   CraigslistSearchLink: Craigslist
   DirectionsLink: Directions
