Modify new production Amplify stack
Following the steps in the staging stack README.

--- a/deployment/amplify/newprod/amplify/backend/auth/echolocatorProdAuth/echolocatorProdAuth-cloudformation-template.yml
+++ b/deployment/amplify/newprod/amplify/backend/auth/echolocatorProdAuth/echolocatorProdAuth-cloudformation-template.yml
@@ -163,7 +163,14 @@ Resources:
           Name: email
           Required: true
           Mutable: true
-        
+        -
+          Name: voucher
+          Required: false
+          Mutable: false
+          AttributeDataType: String
+          StringAttributeConstraints:
+            MinLength: "6"
+            MaxLength: "8"
       
       
       
