--- a/deployment/amplify/production/amplify/.config/project-config.json
+++ b/deployment/amplify/production/amplify/.config/project-config.json
@@ -1,17 +1,17 @@
 {
-    "projectName": "production",
-    "version": "2.0",
+    "providers": [
+        "awscloudformation"
+    ],
+    "projectName": "echolocatorProd",
+    "version": "3.0",
     "frontend": "javascript",
     "javascript": {
         "framework": "react",
         "config": {
             "SourceDir": "src",
             "DistributionDir": "build",
-            "BuildCommand": "npm run-script build",
-            "StartCommand": "npm run-script start"
+            "BuildCommand": "yarn build",
+            "StartCommand": "yarn start"
         }
-    },
-    "providers": [
-        "awscloudformation"
-    ]
+    }
 }
