shows listings when clicked (only for part of arlington bc data hard coded

--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -42,6 +42,7 @@ Dock:
   GoBackToFavorites: Back to saved recommendations
   GoPreviousPage: Go back
   GoNextPage: Show more
+  ShowListings: Show units
   NoResults: No results
   Recommendations: Your recommendations
   ShowAllButton: All
