updated listings — show carousel

--- a/taui/package.json
+++ b/taui/package.json
@@ -56,11 +56,13 @@
     "logrocket-react": "~4.0.1",
     "package.json": "^2.0.1",
     "react": "~16.13.0",
+    "react-bootstrap": "^1.0.0",
     "react-dom": "~16.13.0",
     "react-ga": "~2.7.0",
     "react-leaflet": "~1.9.1",
     "react-leaflet-vectorgrid": "~2.2.1",
     "react-redux": "~5.1.2",
+    "react-responsive-carousel": "^3.2.4",
     "react-router": "~5.1.2",
     "react-router-dom": "~5.1.2",
     "react-select": "~1.3.0",
