--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -125,6 +125,7 @@ Profile:
   ChooseTravelMode: How will you most often get to the above addresses?
   DeleteAddress: Delete this address
   DeletePrimaryAddressError: Cannot delete primary destination. Set another as the primary first.
+  ChooseVoucher: Do you have a voucher?
   Cancel: Cancel
   ClientEmailLabel: Email address
   ClientEmailError: Please enter a valid email address.
@@ -141,8 +142,11 @@ Profile:
   ImportanceViolentCrime: Public safety
   Primary: Primary
   Purpose: Purpose
-  Rooms: Number of bedrooms on your voucher
+  RoomsVoucher: Number of bedrooms on your voucher
+  RoomsNoVoucher: Desired number of bedrooms
   Budget: Budget for apartment
+  YesVoucher: Yes
+  NoVoucher: No
   Go: Save profile
   NameRequired: Please enter a name for the head of household.
   SaveError: Failed to save profile. Please try again.
