hides the neighborhood travel when listing selected & gets the correct zipcode

--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -47,7 +47,7 @@ Dock:
   Recommendations: Your recommendations
   ShowAllButton: All
   ShowSavedButton: Saved
-  SiteBy: site by Azavea
+  SiteBy: site by Azavea and Altruistech
 NeighborhoodDetails:
   AboutNeighborhoodLinksHeading: Learn about this neighborhood
   ApartmentsDotComLink: Apartments.com
