--- a/taui/package.json
+++ b/taui/package.json
@@ -48,12 +48,14 @@
     "debug": "~4.1.1",
     "focus-visible": "~5.0.2",
     "geojson-bbox": "~0.0.0",
+    "http-proxy-middleware": "^1.0.4",
     "isomorphic-fetch": "~2.2.1",
     "jsolines": "~2.1.2",
     "leaflet": "~1.5.1",
     "lodash": "~4.17.15",
     "logrocket": "^1.0.6",
     "logrocket-react": "~4.0.1",
+    "morgan": "^1.10.0",
     "package.json": "^2.0.1",
     "react": "~16.13.0",
     "react-bootstrap": "^1.0.0",
