--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -1,4 +1,5 @@
 # English
+English: English
 Systems:
   CalculatingAccessibility: Calculating accessibility...
   NoGrids: No opportunity data has been loaded...
@@ -201,6 +202,7 @@ Booleans:
   No: No
 UnknownValue: Unknown
 #Spanish
+Spanish: Spanish
 Systems:
   CalculatingAccessibility: Calculating accessibility...
   NoGrids: No opportunity data has been loaded...
@@ -403,6 +405,7 @@ Booleans:
   No: No
 UnknownValue: Unknown
 #Chinese
+Chinese: Chinese
 Systems:
   CalculatingAccessibility: Calculating accessibility...
   NoGrids: No opportunity data has been loaded...
