Text Alert changes

--- a/deployment/amplify/staging/amplify/backend/auth/echolocatorStagingAuth/echolocatorStagingAuth-cloudformation-template.yml
+++ b/deployment/amplify/staging/amplify/backend/auth/echolocatorStagingAuth/echolocatorStagingAuth-cloudformation-template.yml
@@ -166,7 +166,7 @@ Resources:
         -
           Name: voucher
           Required: false
-          Mutable: false
+          Mutable: true
           AttributeDataType: String
           StringAttributeConstraints:
             MinLength: "6"
