--- a/taui/package.json
+++ b/taui/package.json
@@ -40,11 +40,11 @@
     "@conveyal/gridualizer": "~2.1.0",
     "@conveyal/lonlat": "~1.4.0",
     "@conveyal/woonerf": "~4.2.1",
-    "@mapbox/polyline": "~1.1.0",
+    "@mapbox/polyline": "^1.1.1",
     "@signalwire/node": "^2.3.3",
-    "apify": "^0.21.0",
+    "apify": "^0.21.1",
     "aws-amplify-react": "~2.3.13",
-    "aws-sdk": "^2.704.0",
+    "aws-sdk": "^2.720.0",
     "babel-plugin-css-modules-transform": "~1.6.2",
     "cors-anywhere": "^0.4.3",
     "d3-scale": "~2.2.2",
@@ -53,29 +53,29 @@
     "focus-visible": "~5.0.2",
     "fs": "0.0.1-security",
     "geojson-bbox": "~0.0.0",
-    "http-proxy-middleware": "^1.0.4",
+    "http-proxy-middleware": "^1.0.5",
     "isomorphic-fetch": "~2.2.1",
     "isomorphic-ws": "^4.0.1",
     "jsolines": "~2.1.2",
     "json": "^9.0.6",
     "leaflet": "~1.5.1",
-    "lodash": "^4.17.15",
-    "logrocket": "^1.0.6",
+    "lodash": "^4.17.19",
+    "logrocket": "^1.0.10",
     "logrocket-react": "~4.0.1",
     "morgan": "^1.10.0",
     "nightmare": "^3.0.2",
     "package.json": "^2.0.1",
-    "puppeteer": "^3.3.0",
-    "puppeteer-core": "^3.3.0",
     "react": "~16.13.0",
-    "react-bootstrap": "^1.0.0",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "~16.13.0",
     "react-ga": "~2.7.0",
     "react-leaflet": "~1.9.1",
     "react-leaflet-vectorgrid": "~2.2.1",
     "react-loader-spinner": "^3.1.14",
+    "react-onclickoutside": "^6.9.0",
+    "react-outside-click-handler": "^1.3.0",
     "react-redux": "~5.1.2",
-    "react-responsive-carousel": "^3.2.4",
+    "react-responsive-carousel": "^3.2.9",
     "react-router": "~5.1.2",
     "react-router-dom": "~5.1.2",
     "react-select": "~1.3.0",
@@ -87,17 +87,17 @@
     "redux-actions": "~2.6.5",
     "redux-mock-store": "1.5.4",
     "reselect": "~4.0.0",
-    "superagent": "^5.2.2",
-    "ws": "^7.3.0"
+    "superagent": "^5.3.1",
+    "ws": "^7.3.1"
   },
   "devDependencies": {
     "core-js": "~2.6.10",
     "mastarm": "https://github.com/azavea/mastarm.git#dev",
-    "semantic-release": "^17.0.4",
+    "semantic-release": "^17.1.1",
     "stylelint": "^9.6.0",
     "stylelint-azavea": "https://github.com/azavea/stylelint-azavea#develop",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "webpack": "^4.44.0",
+    "webpack-cli": "^3.3.12"
   },
   "peerDependencies": {
     "prop-types": "~15.7.2"
